# Wabbitemu-Android

./: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/angelsl/wabbitemu/: CalcKeyManager.java  CalcSkin.java  SkinBitmapLoader.java  WabbitLCD.java
app/src/main/java/io/github/angelsl/wabbitemu/activity/: AboutActivity.java  BrowseActivity.java  SettingsActivity.java  WabbitemuActivity.java  WizardActivity.java
app/src/main/java/io/github/angelsl/wabbitemu/calc/: CalcInterface.java  CalcModel.java  CalcScreenUpdateCallback.java  CalcThread.java  CalculatorManager.java  FileLoadedCallback.java  MainThread.java
app/src/main/java/io/github/angelsl/wabbitemu/extract/: MsiDatabase.java  MsiHandler.java
app/src/main/java/io/github/angelsl/wabbitemu/fragment/: BrowseFragment.java  EmulatorFragment.java  SettingsFragment.java
app/src/main/java/io/github/angelsl/wabbitemu/utils/: ErrorUtils.java  FileUtils.java  IntentConstants.java  KeyMapping.java  OSDownloader.java  OnBrowseItemSelected.java  PreferenceConstants.java  ProgressTask.java  SpinnerDropDownAdapter.java  StorageUtils.java  ViewUtils.java
app/src/main/jni/: CMakeLists.txt  wabbitemujni.c  wabbitemujni.h
app/src/main/jni/utilities/: savestate.cpp  screenshothandle.c  var.c
app/src/main/res/layout/: about.xml  browse.xml  choose_os_page.xml  emulator.xml  landing_page.xml  main.xml  model_page.xml  os_download_page.xml  os_page.xml  settings.xml  wizard.xml
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
